removed TODO from annotations overview, fixed some typos

--- a/documentation/latex/chapter-architecture.tex
+++ b/documentation/latex/chapter-architecture.tex
@@ -1,7 +1,7 @@
 \section{Modular Architecture}
 %TODO: this section is a stub
 Reprotool project can be seen as a collection of Eclipse plugins built upon Eclipse platform distributed together as a standalone RCP application.
-List of plugins is presented in~\ref{sec:plugins}.
+List of plugins is presented in Appendix~\ref{sec:plugins}.
 
 %Something about modularization of the application using OSGi.
 Eclipse platform uses Equinox implementation of the OSGi. OSGi is a specification defining module system and service platform for the Java programming language.
