doc - small update

--- a/documentation/latex-user/chapter-introduction.tex
+++ b/documentation/latex-user/chapter-introduction.tex
@@ -16,9 +16,16 @@ because you will need them in later parts of this documentation. Read the tutori
 If you display the \emph{Welcome page} in other than maximized mode, you will see the quick tutorial in the welcome page. This way, you
 can easily follow the tutorial and perform the required steps in the workbench.
 
+\newpage
+
 \begin{figure}[ht]
   \centering
   \includegraphics[height=280pt]{images/reprotoolWelcomeTutorial}
   \caption{The \emph{Reprotool} welcome page - quick tutorial}
   \label{fig:reprotoolWelcomeTutorial}
 \end{figure}
+
+If you close the \emph{Welcome page}, you can display it again by selecting this command from the main menu:
+\begin{verbatim}
+ Help / Welcome
+\end{verbatim}
