--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -1,6 +1,6 @@
 \section{Linguistic tools}
 
-One of the main parts of Reprotool project is an automatic text analysis. This part allows user to skip long-lasting manual annotation by pushing a button. This chapter describes implementation of linguistics analysis in Reprotool project and its linguistics background.
+One of the main parts of Reprotool project is an automated analysis of the use case steps. This functionality saves user's work with tedious manual annotation - all the user has to do is to push a button. However, if user is not satisfied with results he can always manually tweak the analyzed use case step. This chapter describes implementation of linguistics analysis in Reprotool project and its linguistics background.
 
 \subsection{Introduction}
 Process of linguistics analysis gets natural language sentences as an input and returns analyzed usecases as is shown at figure \ref{fig:LinguisticsAnalyseSmall}. Whole process is divided into two parts: process of parsing and core analysis. Parsing contains main linguistics operations which are tokenization, tagging, parsing and lemmatization. Core work of parsing process is done by popular external linguistic analysis tools described in section \ref{sec:externaltools}. Core analysis converts parsed sentence trees with annotations into our usecases model. This process is described in more detail in section \ref{sec:analysis}. 
@@ -14,7 +14,7 @@ It is recommended to see section \ref{sec:analyzer}, where is also located our l
 \item {\bf Action type} final output result of analysis
 \end{itemize}
 
-Each implementation of any analyse brings problem of measuring success. We have put together a dataset of nearly tree hundred of sentences. These sentences contain the most common use cases operations. All these sentences were manually annotated and analyzed. In section \ref{sec:benchmark} is described our benchmark solution with actual results.
+Each implementation of any analyse brings problem of measuring success. We have put together a dataset of nearly three hundred sentences. These sentences contain the most common use cases operations. All these sentences were manually annotated and analyzed. In section \ref{sec:benchmark} is described our benchmark solution with actual results.
 
 \begin{figure}[ht]
   \centering
@@ -23,17 +23,18 @@ Each implementation of any analyse brings problem of measuring success. We have 
   \label{fig:LinguisticsAnalyseSmall}
 \end{figure}
 
-In next pages is described work of various linguistics tools. All tools use Penn TreeBank tags notation. We follow this custom in our model and our tools.
+Following pages contain description of the used linguistics tools. All tools use Penn TreeBank tags notation. We use this this notation in our model and our tools as well.
 
 \subsection{External tools}
 \label{sec:externaltools}
-As described in previous sections, whole linguistics analysis is a hard task to do. Implementing all acts of this work is out of the scope of the project.  Especially parsers do a very sophisticated and difficult tasks. We choose selected commonly used external tools to do some parts of analysis. 
+As described in previous sections whole process of linguistics analysis is not a trivial task. We chose commonly used external tools for some parts of analysis and bundled them as Eclipse plugins.
 
-Needed models for all tools are build and packed with bundles corresponding to these tools. These bundles are reprotool.tools.anna,  reprotool.tools.dbparser and reprotool.tools.mxpost.
+These parts were \emph{part-of-speech tagging}, \emph{sentence parsing} and \emph{obtaining lemma forms} for words. Main reasons for our selection were widespread usage and credibility of the tools, at least partial compatibility of output and input formats and Java implementation. 
 
-These parts were part-of-speech tagging, sentence parsing and obtaining lemma forms for words. Main reasons for our selection were widespread  and credibility of the tools, at least partial compatibility of output and input formats and Java implementation. 
+We demanded Java implementation, because runtime control of programs written in different languages is inoperative and bring problems in portability of the project. The selected tools don't provide access to analysed entities in form of Java objects, but we are able to control their correct running.
 
-We demanded Java implementation, because runtime control of programs written in different languages is inoperative and bring big problems in portability of project. The selected tools don't allow access like common internal java classes, but we are able to control their correct running.
+Needed models for all tools are build and packed with bundles corresponding to these tools. These bundles are \verb|reprotool.tools.anna|,  \verb|reprotool.tools.dbparser| and \verb|reprotool.tools.mxpost|.
+
 
 Selected tools are:
  
@@ -50,19 +51,19 @@ MXPOST tagger was written in Java implementation at University of Edinburg by NL
         
 Main part of this tagger is based on original parser written by Adwait Ratnaparkhi. Detailed description of this original parser is described in article \cite{Linguistics-ratnaparkhi96} and in his PhD thesis \cite{Linguistics-ratnaparkhi98}. 
 
-Input data, natural language sentences, have to be tokenized according to the Penn Treebank conventions. Tagger needs it model consisting of tagged data and data are tagged with use of maximum entropy probability distribution. So the input sentence have to find a little bit corresponding sentence in trained data.
+Input data, natural language sentences, have to be tokenized according to the Penn Treebank conventions. Tagger needs for the run its model consisting of tagged data. Input data are then tagged with use of maximum entropy probability distribution. So the tagger has to find sentence with similar structure in the trained data.
   
 \subsubsection{Dan Bikel's Multilingual Statistical Parsing Engine}   
 
-Statistical parsing do two main tasks. First is creating and training model and second is core parsing. For these purpose we have to obtain large data model with parsed sentences. 
+Statistical parsing engine does two main tasks. First is creating and training of the model and second is core parsing. For these purposes we had to obtain large data model with parsed sentences. 
 
-During the parsing, parses is trying to find the most similar sentence in trained model. As a trained data, we use a part of Penn Treebank, Wall Street Journal collection.
+During the parsing, parser is trying to find the most similar sentence in trained model. As a trained data, we use a part of emph{Penn Treebank, Wall Street Journal collection}.
 
 \subsubsection{Mate-tools lemmatizer}          
           
-This lemmatizer is working in a similar way like previous parser. It also needs similar data models, because it cannot use just list of lemmas an theirs word forms. It also needs to obtain POS information for correct work.
+This lemmatizer is working in a similar way like previous parser. It also needs similar data models, because it cannot use just list of lemmas and theirs word forms. It also needs to obtain POS information for correct work.
 
-This tool uses one word per line 2009 CoNLL  input format, so we have to divide our sentences.
+This tool uses one word per line 2009 CoNLL input format, so we had to divide our sentences to adapt them to this format.
 
 \subsection{Linguistic analysis}
 \label{sec:analysis}
