--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -180,32 +180,32 @@ First part of process is initialization. This process is executed at startup of 
 \item {\bf Analysis of the initialization sentence} - this step speeds up following analyses by memory initialization.
 \end{itemize}
 
-Initialization process is executed as Eclipse job and should take about ten seconds (depending on infrastructure). If initialization face error, it tries to restart.
+Initialization process is executed as Eclipse job and should take about ten seconds (depending on infrastructure). If initialization faces error, it tries to restart.\\
 
-Second, bigger part on analysis process is sentence analysis. It runs at user command. By analyze command for UserCaseStep or in loop for all sentences by analyze command for UserCase. This process contains following steps:
+Second, bigger part on analysis process is sentence analysis. Its start is triggered by user pushing a button in IDE ( analyze command for use case step or in loop for all use case steps in use case). This process contains following steps:
 
 \begin{itemize}
-\item {\bf Execute linguistic analysis job for one sentence} This step runs all four linguistic tools for selected sentence. When tools encounter error, analysis is executed with safe version of sentence with stripped bad characters. 
-\item {\bf Match sentence object} At this point we have original sentence string and sentence object with dependency tree. We have to match these objects for final action type text ranges marking.
-\item {\bf Find text ranges} Analyze sentence for apostrophes and quotation marks. This step improves label targeting.
-\item {\bf Execute core analyzer} This step determines constituents and action types.
-\item {\bf Prepare model changes} Stack all needed changes of model. Changes must be valid and must corresponds.
-\item {\bf Return results to UI} All changes to model are executed at one place by UI. UI have always control over internal model.
+\item {\bf Execute linguistic analysis job for one sentence} - runs all four linguistic tools for selected sentence. When tools encounter error, analysis is executed with safe version of sentence with stripped bad characters. 
+\item {\bf Match sentence object} - at this point we have original sentence string and sentence object with dependency tree. We have to match these objects for final action type text ranges marking.
+\item {\bf Find text ranges} - analyze sentence for apostrophes and quotation marks. This step improves label targeting.
+\item {\bf Execute core analyzer} - determines constituents and action types.
+\item {\bf Prepare model changes} - stacks all needed changes of model. Changes must be valid and must corresponds.
+\item {\bf Return results to UI} - all changes to model are executed at one place by UI. UI has always control over internal model.
 \end{itemize}
 
 \subsubsection{Core analyzer}
 Part of our project called "core analyzer" describes process following basic linguistic analysis. This core analyzer accomplish two main tasks:
 
 \begin{itemize}
-\item {\bf Determine constituents} Find all important words in sentence.
-\item {\bf Determine action type} Set final action type.
+\item {\bf Determine constituents} - find all important words in sentence.
+\item {\bf Determine action type} - set final action type.
 \end{itemize}
 
 Rules for determining constituents are described in own section \ref{sec:lingbackground}. Constituents are determined in order: subject, main verb, indirect object, representative object.
 
 Also action types have own section \ref{sec:actiontypes}. These types are determined in order: Include, Goto, Abort, Internal, To system, From system. Rules for last three types are mostly used at same time.
 
-All changes made by core analyzer are stored in CompoundCommand object. Therefore, all changes are made at one place an user can undo these changes.
+All changes made by core analyzer are stored in \verb|CompoundCommand| object. Therefore, all changes are made at one place an user can undo these changes.
 
 \begin{figure}[ht]
   \centering
@@ -220,58 +220,56 @@ Main goal of linguistic analysis in our project is to identify important words i
 
 \begin{itemize}
 \item {\bf Subject} main subject of the sentence
-\item {\bf Main verb} verb wearing meaning
+\item {\bf Main verb} verb which specifies meaning
 \item {\bf Representative object} main subject of sentence action
-\item {\bf Indirect object} an actor usually owning representative object
+\item {\bf Indirect object} an actor to whom or for whom the action of the verb is done and who is receiving the \emph{Representative object}
 \end{itemize}
 
 These words are used in action analysis. We are matching sentences to proper actions with a set of deriving rules, which are based on these words. 
                                                                     
 \subsubsection{Subject}
-For our purpose, subject must be always an actor. User have to add sentence actors before analysis. Usually is subject noun in a top noun phrase. If the sentence is in passive, subject stands at object's place. 
+For our purpose, subject must be always an actor. User has to add sentence actors before analysis. Usually is subject noun in a top noun phrase. If the sentence is in passive, subject stands at object's place. 
 
 Subject could be also missing. In that case analysis still tries to find other constituents.
 
-There are two predefined actors, "system" and "user". Automatic analysis use these actors, but it is strongly recommended, that user adds these actors to project.
+There are two predefined actors, "system" and "user". Automatic analysis uses these actors, but it is strongly recommended, that user adds these actors to project.
 
 \subsubsection{Main verb}
-This verb is a main verb of highest verb phase in a sentence. In a passive sentence is auxiliary verb ignored. 
+This verb is a main verb of highest verb phrase in a sentence. In a passive sentence is auxiliary verb ignored. 
 
-Finding verb is in properly parsed sentence an easy task, but in a sentence with a wrong parsed tree usually could not be resolved. It happens usually when parsed don't know current verb. This means, that parser tags verb by different POS tag.
+Finding verb in properly parsed sentence is an easy task, but in a sentence with a wrong parsed tree it usually can not be resolved. It happens usually when parser doesn't know contained verb. This means, that parser tags verb by different POS tag.
 
 \subsubsection{Indirect object}
-We are deriving first indirect objects and after then representative (conceptual) objects. All indirect object are actors and indirect objects aren't in the same node with other objects.
+Indirect objects are derived before representative (conceptual) objects. All indirect objects are actors and indirect objects aren't in the same node with other objects.
 
-Node with indirect objects must be noun phrase with verb phrase in it. If this node is found, all objects are marked as indirect. Indirect object cannot be in possessive form.  
+Node with indirect objects must be a noun phrase containing verb phrase. If this node is found, all objects are marked as indirect. Indirect object cannot be in possessive form.  
 
 \subsubsection{Representative object}
 Representative object could be noun in a noun phrase which is a child of main verb phrase. Except noun phrase with indirect objects.
 
-If a phrase contains more nouns without conjunction, we mark as an object last of the nouns. This rule was established, because external tools usually determines adverbs as nouns. After all, noun with multiple adverbs still represents one object.
+If a phrase contains more nouns without conjunction, we mark as an object last of the nouns. This rule was established, because external tools usually determine adverbs as nouns. After all, noun with multiple adverbs still represents one object.
 
 \subsection{Action types deriving rules}
 \label{sec:actiontypes}
-When we have determined all constituents, analysis can continue with determining proper action type. This is followed with filling internal models with obtained data from analysis. Each action type has its own set of deriving rules and these rules are strictly disjunct. This means, that each sentence could have determine only one action type. This section contains description of these deriving rules. 
+When we have determined all constituents, analysis can continue with determining proper action type. This is followed by filling internal models with obtained data from analysis. Each action type has its own set of deriving rules and these rules are strictly disjunct. This means, that only one action type can be assigned to analyzed sentence. This section contains description of these deriving rules. 
 
-Types of actions come from our usecase model, which is restricted due to exporting purpose (exporting feature of \emph{Reprotool} project). Overall small action set allows various export options described in previous chapters. 
-
-\subsubsection{Include usecase action}
-Sentence contains one of the set of defined verbs. These verbs are: "continue", "repeat", "resume", "retry" and "include".  This verb must be main verb of the sentence. It also have to contain reference to usecase and label of one existing usecase in current project.
+\subsubsection{Include use case action}
+Sentence contains one of the following verbs: "continue", "repeat", "resume", "retry" and "include".  This verb must be main verb of the sentence. It also has to contain reference to usecase and label of one existing usecase in current project.
 
 \subsubsection{Goto action}
-Sentence contains one of the set of defined verb, same like in Include usecase action. This verb must be main verb of the sentence a must be found target. Target must be existing usecasestep in current usecase. 
+Sentence contains one of the verbs from \emph{Include use case action}. This verb must be main verb of the sentence. In addition, target of the action must be found and it has to be existing use case step in current use case. 
 
 \subsubsection{Abort action}
 Set of abort verbs contains "abort", "terminate", "end", "exit" and "finish".  This verb must be main verb of the sentence.
 
 \subsubsection{From system action}
-System is a subject of the sentence and we have indirect object (not system). System is communicating with other actor.
+System is the subject of the sentence and we have identified indirect object (other than system). System is communicating with other actor.
 
 \subsubsection{To system action}
-System is an indirect object. Subject could not be system. Example of To system action could be found at figure \ref{fig:ToSystemActionExample}. In common use case, this action type represents communication from subsystems to system.
+System is an indirect object. Subject cannot be system. Example of \emph{To system} action could be found at figure \ref{fig:ToSystemActionExample}. In common use case, this action type represents communication from subsystems to system.
 
 \subsubsection{Internal action}
-System is a subject and there is not indirect object, or system is also indirect object. This action type use used for majority of common system actions, like sending messages or throwing errors.
+System is a subject and there is no indirect object, or system is also indirect object. This action type is used for majority of common system actions, like sending messages or throwing errors.
 
 \begin{figure}[ht]
   \centering
@@ -281,7 +279,7 @@ System is a subject and there is not indirect object, or system is also indirect
 \end{figure}
 
 \subsubsection{Unknown action}
-This is an default action type. If analysis could not find any other action, we set Unknown action type. This action type is also used when automatic analysis encounter error. 
+This is an default action type. If analysis could not find any other action, we set Unknown action type. This action type is also used when automatic analysis encountered error. 
 
 \subsection{Benchmark}
 \label{sec:benchmark}
