added note to benchmark to run it as "JUnit plugin test"

--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -303,7 +303,7 @@ Right usage of our benchmark plug-in is described in following list. This proces
 \item {\bf Obtaining sentences} First part of dataset creation is collecting data. It is recommended to obtain sentences from use cases.
 \item {\bf Manual annotation} The most time consuming part is dataset annotation. Example of dataset file is located in table \ref{tab.benchmarkinput}.
 \item {\bf Dataset location} User has to specify dataset location in source code.
-\item {\bf Benchmark running} The easiest way to run benchmark is to execute corresponding JUnit test.
+\item {\bf Benchmark running} The easiest way to run benchmark is to execute corresponding JUnit test by right clicking on test file in Eclipse and selecting \emph{Run as} and \emph{JUnit Plug-in test}.
 \end{enumerate}
 
 Obtaining of proper dataset is more described in section \ref{sec:dataset}. 
