changed product to produce "reprotool" launcher, moved installation from dev to user doc.

--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -170,6 +170,10 @@
 
 \newpage
 
+\thanks{At this place we would like to thank our supervisor Viliam Šimko for his enthusiastic leadership, friendly attitude and valuable advices.}
+
+\newpage
+
 \tableofcontents
 \vspace{12pt}
 
@@ -180,7 +184,6 @@
   \include{chapter-umlExport}
   \include{chapter-lts}
   \include{chapter-linguistics}
-  \include{chapter-installation}
   \appendix
   \include{appendix-list-of-plugins}
 %  \include{chapter-tutorial}
