--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -167,14 +167,13 @@
 \vspace{12pt}
 
 %\newpage
-
+\include{chapter-installation}
 \include{chapter-introduction}
 \include{chapter-newProj}
 \include{chapter-textual-editor}
 \include{chapter-import}
 \include{chapter-quick-tutorial}
 \include{chapter-model-checking}
-%\include{chapter-verification}
 \include{chapter-uml}
 \include{chapter-manual-analysis}
 \include{chapter-vocabulary}
