added chronological description of the project

--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -184,6 +184,7 @@
   \include{chapter-umlExport}
   \include{chapter-lts}
   \include{chapter-linguistics}
+  \include{chapter-chronological-desc}
   \appendix
   \include{appendix-list-of-plugins}
 %  \include{chapter-tutorial}
