--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -184,7 +184,8 @@
   \include{chapter-umlExport}
   \include{chapter-lts}
   \include{chapter-linguistics}
-  \include{chapter-chronological-desc}
+  \include{chapter-future-work}
+  \include{chapter-chronological-desc}  
   \appendix
   \include{appendix-list-of-plugins}
 %  \include{chapter-tutorial}
